fix nav button overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -261,7 +261,7 @@ header {
       position: absolute;
       top: 0;
       left: -100%;
-      width: 42%;
+      width: 50vw;
       height: 100vh;
       background: $bg-color;
       z-index: 100;
@@ -277,7 +277,7 @@ header {
         content: "";
         position: fixed;
         top: 0;
-        left: 42%;
+        left: 50vw;
         width: 100vw;
         height: 100vh;
         background: rgba(0, 0, 0, 0.7);
@@ -302,7 +302,7 @@ header {
       .btn {
         display: inline-block;
         // text-align: center;
-        transform: translateX(50%);
+        transform: translateX(30%);
         margin: 4rem 0;
         a {
           color: #fff;
